# beewatch

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .runsettings  .ycm_extra_conf.py  AUTHORS  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  LICENSE  README.md  azure-pipelines.yaml  beewatch-config.cmake  rest_api.md
cmake/: CompileOptions.cmake  Custom.cmake  GetDirContents.cmake
docs/api-docs/: CMakeLists.txt
extra/platform_abstraction/include/: syslog.h  wiringPi.h
include/: algorithms.h  containers.h  data_types.h  logging.h  manager.h  patterns.h  priority.h  str.h  timing.h  version.h.in
include/ctrl/: climate_ctrl.h
include/db/: db.h  tree.h
include/global/: db.h  logging.h  manager.h  time.hpp
include/http/: server.h
include/hw/: dhtxx.h  fan.h  hx711.h  max9814.h
include/io/: gpio.h  io.h  pwm.h  tachometer.h
include/rest/: rest_api.h
include/util/: algorithms.hpp  db.h  file.h  patterns.hpp  priority.h  string.h
include/windows_compat/: syslog.h  wiringPi.h
install/etc/nginx/sites-enabled/: beewatch.conf
install/etc/rsyslog.d/: beewatch.conf
install/etc/systemd/system/: beewatch.service
install/usr/local/sbin/: run_beewatch.sh
source/: CMakeLists.txt  logging.cpp  main.cpp  manager.cpp  priority.cpp  timing.cpp
source/beewatch/: CMakeLists.txt  main.cpp
source/beewatch/include/beewatch/: app.h
source/beewatch/source/: main.cpp
source/climate/: CMakeLists.txt
source/climate/include/climate/: climatelib.h
source/ctrl/: CMakeLists.txt  climate_ctrl.cpp
source/ctrl/include/ctrl/: climate_ctrl.h  ctrl.h  ctrllib.h
source/ctrl/source/: climate_ctrl.cpp  ctrl.cpp
source/db/: db.cpp  tree.cpp
source/global/: db.cpp  logging.cpp  manager.cpp
source/health/: CMakeLists.txt
source/http/: server.cpp
source/hw/: CMakeLists.txt  dhtxx.cpp  fan.cpp  hx711.cpp  max9814.cpp
source/hw/include/hw/: dhtxx.h  fan.h  hwlib.h  hx711.h  max9814.h
source/hw/source/: dhtxx.cpp  fan.cpp  hx711.cpp  max9814.cpp
source/io/: CMakeLists.txt  gpio.cpp  pwm.cpp  tachometer.cpp
source/io/include/io/: bcm2835.h  dhtxx.h  gpio.h  io.h  iolib.h  pigpio.h  pwm.h  tachometer.h
source/io/source/: dhtxx.cpp  gpio.cpp  pigpio.cpp  pwm.cpp  tachometer.cpp
source/libclimate/: CMakeLists.txt
source/libclimate/include/libclimate/: libclimate.h
source/libclimate/source/: libclimate.cpp
source/libhealth/: CMakeLists.txt
source/libhealth/include/libhealth/: libhealth.h
source/libhealth/source/: libhealth.cpp
source/libio/: CMakeLists.txt
source/libio/include/libio/: gpio.h  io.h  pwm.h  tachometer.h
source/libio/source/: gpio.cpp  pwm.cpp  tachometer.cpp
source/libmass/: CMakeLists.txt
source/libmass/include/libmass/: libmass.h
source/libmass/source/: libmass.cpp
source/libsensors/: CMakeLists.txt
source/libsensors/include/libsensors/: libsensors.h
source/libsensors/source/: libsensors.cpp
source/mass/: CMakeLists.txt
source/reporting/: CMakeLists.txt
source/reporting/include/reporting/: reportinglib.h
source/rest/: rest_api.cpp
source/tests/: CMakeLists.txt
source/tests/testclimate/: CMakeLists.txt  climate_test.cpp
source/tests/testhealth/: CMakeLists.txt  main.cpp
source/tests/testhw/: CMakeLists.txt
source/tests/testio/: CMakeLists.txt  test_pwm.cpp
source/tests/testmass/: CMakeLists.txt
source/tests/testreporting/: CMakeLists.txt
source/tests/testsensors/: CMakeLists.txt  sensors_test.cpp
source/util/: CMakeLists.txt  db.cpp  file.cpp  logging.cpp  priority.cpp  string.cpp
source/util/include/util/: algorithms.h  assert.h  data_types.h  logging.h  priority.h  utillib.h
source/util/source/: logging.cpp  priority.cpp
source/windows_compat/: syslog.cpp  wiringPi.cpp
tests/: CMakeLists.txt
tests/include/: gpioMock.hpp  pwmMock.hpp  tachometerMock.hpp  wiringPiMock.hpp
tests/lib/: catch.hpp
tests/source/: main.cpp  test_dhtxx.cpp  test_gpio.cpp  test_hx711.cpp  test_pwm.cpp  test_tachometer.cpp  test_time.cpp
tests/source/hw/: test_dhtxx.cpp  test_fan.cpp  test_hx711.cpp
tests/source/io/: test_gpio.cpp  test_pwm.cpp  test_tachometer.cpp
tests/source/util/: test_time.cpp
web/: package-lock.json  package.json
web/src/: browserconfig.xml  index.html
web/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  app.theme.scss  hive.service.spec.ts  hive.service.ts  rest.service.ts
web/src/app/monitor/: confirm-reset-dialog.component.html  monitor.component.css  monitor.component.html  monitor.component.spec.ts  monitor.component.ts  monitor.ts
web/src/app/monitor/climate/: climate.service.ts  climate.ts
web/src/app/version/: version.component.html  version.component.scss  version.component.ts  version.service.ts  version.ts
